# compsys726-asou651

./: Cargo.toml  README.md
common/: Cargo.toml  build.rs
common/src/: lib.rs
devel/: setup.sh
devel/lib/pkgconfig/: ropose.pc
devel/lib/ropose/: ropose
devel/share/ropose/cmake/: ropose-msg-paths.cmake  roposeConfig.cmake
devel/share/roseus/ros/ropose/: manifest.l
launch/: launchSimulation.launch  stage_and_mapping.launch
nodes/: obstacle-detection  pathfinding
obstacle-detection/: Cargo.toml  build.rs
obstacle-detection/src/: diff2.rs  main.rs  model.rs  model3.rs
pathfinding/: Cargo.toml
pathfinding/src/: main.rs
src/: main.rs
src/ropose/: CMakeLists.txt  package.xml
src/ropose/src/: ropose.cpp
world/: generated.world  task1.world
world/generator/: GenerateWorld.cpp  world-generator
