[package]
name = "common"
version = "0.1.0"
authors = ["Antony Southworth <southworthy@gmail.com>"]

[dependencies]
rosrust = { git = "https://github.com/adnanademovic/rosrust" }
rosrust_codegen = "0.6.4"
serde = "1.0.25"
serde_derive = "1.0.25"
fnv = "1.0.6"
rayon = "1.0.1"

[build-dependencies]
rosrust_codegen = "0.6.4"

